--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "test:unit": "jest --config ./test/config/unit.config.ts --coverage",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "ncu": "ncu -i --dep=prod,dev --format group -p yarn"
   },
   "dependencies": {
     "fastify": "4.17.0"
@@ -17,22 +18,23 @@
   "devDependencies": {
     "@types/jest": "29.5.1",
     "@types/node": "20.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "5.59.8",
-    "eslint": "^8.0.1",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-standard-with-typescript": "34.0.1",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-import-helpers": "1.3.1",
-    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
     "jest": "29.5.0",
+    "npm-check-updates": "16.10.12",
     "prettier": "2.8.8",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "tsx": "3.12.7",
-    "typescript": "*",
-    "husky": "^8.0.0"
+    "typescript": "*"
   }
 }
