--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "ncu": "ncu -i --dep=prod,dev --format group -p yarn"
   },
   "dependencies": {
+    "bcryptjs": "2.4.3",
+    "dayjs": "1.11.8",
     "dotenv": "16.1.3",
     "fastify": "4.17.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
     "@types/jest": "29.5.1",
     "@types/node": "20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
@@ -34,6 +37,7 @@
     "jest": "29.5.0",
     "npm-check-updates": "16.10.12",
     "prettier": "2.8.8",
+    "timekeeper": "2.2.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "tsx": "3.12.7",
